apps/test666/base/test666-deploy.yaml
---
# create deployment for test666
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: test666
  namespace: test666
  labels:
    app: test666
    version: 0.0.1
    backstage.io/kubernetes-id: test666
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test666
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: test666
        version: 0.0.1
        backstage.io/kubernetes-id: test666
    spec:
      containers:
      - name: test666
        image: diegoluisi/test666:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            port: 8080
            path: /health-check/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /health-check/liveness
          initialDelaySeconds: 3
          periodSeconds: 15
