apps/test666/base/test666-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test666-vs
  namespace: test666
  labels:
    app: test666
    version: 0.0.1
    backstage.io/kubernetes-id: test666
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - test666.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: test666-svc
      weight: 100
